--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             const username = tg.initDataUnsafe.user.username || '';
             const avatarUrl = tg.initDataUnsafe.user.photo_url || ''; // Получаем URL аватара
 
-            fetch('http://localhost:5000/user', {
+            fetch('https://github.com/Kodeeodsdss/Kodeeodsdss:5000/user', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
