--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Telegram Web App</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <style>
         body {
             display: flex;
@@ -84,9 +85,8 @@
             const firstName = tg.initDataUnsafe.user.first_name || '';
             const lastName = tg.initDataUnsafe.user.last_name || '';
             const username = tg.initDataUnsafe.user.username || '';
-            const avatarUrl = tg.initDataUnsafe.user.photo_url || ''; // Получаем URL аватара
 
-            fetch('https://github.com/Kodeeodsdss/Kodeeodsdss:5000/user', {
+            fetch('http://localhost:5000/user', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -100,6 +100,7 @@
                 return response.json();
             })
             .then(data => {
+                const avatarUrl = data.avatarUrl; // Получите URL аватара из ответа
                 displayUserInfo(data, avatarUrl);
             })
             .catch(err => {
@@ -112,7 +113,7 @@
         function displayUserInfo(user, avatarUrl) {
             const usercard = document.getElementById("usercard");
             usercard.innerHTML = `
-                <img src="${avatarUrl}" alt="Аватар пользователя">
+                <img src="${avatarUrl || 'https://via.placeholder.com/80'}" alt="Аватар пользователя">
                 <p>Имя: ${user.firstName}</p>
                 <p>Фамилия: ${user.lastName}</p>
                 <p>UserID: ${user.userId}</p>
@@ -120,12 +121,8 @@
             `;
             usercard.style.display = "block";
         }
-
         // Вызываем fetchUserData сразу после загрузки страницы
         fetchUserData();
     </script>
-
-    <!-- Подключаем Font Awesome для иконок -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </body>
 </html>
